Compiling tests
Signed-off-by: Jiri Peinlich <jiri.peinlich@gmail.com>