@@ -26,6 +26,7 @@ import org.hyperledger.besu.evm.log.Log;
 import org.hyperledger.besu.evm.log.LogsBloomFilter;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import javax.annotation.Nonnull;
@@ -56,6 +57,7 @@ public class ChainForTestCreator {
         null,
         Hash.EMPTY,
         0,
+        Hash.EMPTY,
         new MainnetBlockHeaderFunctions());
   }
 
@@ -79,6 +81,7 @@ public class ChainForTestCreator {
         blockHeader.getBaseFee().orElse(null),
         blockHeader.getMixHash(),
         blockHeader.getNonce(),
+        blockHeader.getWithdrawalRoot(),
         new MainnetBlockHeaderFunctions());
   }
 
@@ -94,11 +97,14 @@ public class ChainForTestCreator {
   }
 
   public static Block createEmptyBlock(final Long height) {
-    return new Block(prepareEmptyHeader(height), new BlockBody(List.of(), List.of()));
+    return new Block(
+        prepareEmptyHeader(height), new BlockBody(List.of(), List.of(), Collections.emptyList()));
   }
 
   private static Block createEmptyBlock(final Block parent) {
-    return new Block(prepareEmptyHeader(parent.getHeader()), new BlockBody(List.of(), List.of()));
+    return new Block(
+        prepareEmptyHeader(parent.getHeader()),
+        new BlockBody(List.of(), List.of(), Collections.emptyList()));
   }
 
   private static BlockHeader prepareEmptyHeader(final Long number) {
@@ -124,6 +130,7 @@ public class ChainForTestCreator {
         Wei.ZERO,
         Hash.EMPTY,
         0,
+        Hash.EMPTY,
         new MainnetBlockHeaderFunctions());
   }
 }
